--- a/.github/workflows/xc-nap-destroy.yml
+++ b/.github/workflows/xc-nap-destroy.yml
@@ -179,7 +179,7 @@ jobs:
             cloud {
               organization = "${{ secrets.TF_CLOUD_ORGANIZATION }}"
               workspaces {
-                name = "${{ secrets.TF_CLOUD_WORKSPACE_NAP_KIC }}"
+                name = "${{ secrets.TF_CLOUD_WORKSPACE_NAP }}"
               }
             }
           }
